--- a/src/app/fish/fish.component.html
+++ b/src/app/fish/fish.component.html
@@ -8,7 +8,13 @@
     </article>
     <div class="media-content">
       <div class="content">
-        <h4 class="has-text-centered">{{ name }}</h4>
+        <p class="has-text-centered is-size-5">{{ name | titlecase}}</p>
+        <p class="is-size-7">Location: {{location | titlecase }}</p>
+        <p class="is-size-7">Price: {{price}} bells</p>
+        <p class="is-size-7">Time: {{time | uppercase}}</p>
+        <p class="is-size-7">Shadow size: {{shadow | titlecase}}</p>
+        <p class="is-size-5 has-text-centered">{{rarity | titlecase}}</p>
+
       </div>
     </div>
 </div>
